# legaloom_env

./: .dockerignore  .gitignore  CURRICULUM_RUN_NOTES.md  Dockerfile  HF_SPACE_README.md  LOCAL_TESTING.md  LegaLoom_AdversarialBenchmark.ipynb  LegaLoom_FullCurriculum.ipynb  LegaLoom_FullCurriculum_HFSpace.ipynb  LegaLoom_GRPO_Training.ipynb  LegaLoom_QuickTrain.ipynb  README.md  __init__.py  aggregated_results.json  blog_post.md  client.py  demo_script.md  inference.py  models.py  openenv.yaml  pyproject.toml  train_grpo.py  training_log.json  training_scores.json
.github/workflows/: sync_to_hf.yml
runs/: README.md
scripts/: aggregate_models.py  aggregate_seeds.py  generate_charts.py  generate_storytelling_charts.py  populate_results.py  restore_backups.py  statistical_analysis.py  verify_pre_submit.py
server/: Dockerfile  __init__.py  adversarial_cases.py  app.py  graders.py  invoice_db.json  invoice_generator.py  legaloom_env_environment.py  pan_registry.py  scoring.py  tasks.py  tds_rules.py
tests/: conftest.py  test_ablation.py  test_adversarial_cases.py  test_determinism.py  test_edge_cases.py  test_episode_rollout.py  test_grader_consistency.py  test_inference_logging.py  test_reward_hacking.py  test_reward_properties.py  test_schema_contract.py
