# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-legaloom_env"
version = "0.1.0"
description = "Legaloom Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.3",
    "openai>=2.30.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "PyYAML>=6.0.0",
    "matplotlib>=3.8.0",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0",
    "scipy>=1.10",
    "numpy>=1.24",
]
# Pinned versions for the training pipeline. These specific combinations were
# verified to work together on HF Space (A10G) and Colab T4. Newer transformers
# + bitsandbytes combinations have introduced frozenset-attribute errors during
# 4-bit model loading; these pins are reproducibility insurance.
training = [
    "transformers==4.49.0",
    "trl==0.15.2",
    "peft==0.13.2",
    "bitsandbytes==0.45.0",
    "accelerate==1.2.1",
    "datasets>=2.20.0",
]
# Frontier-comparison APIs for the adversarial benchmark (optional)
frontier = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m legaloom_env.server.app
server = "legaloom_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["legaloom_env", "legaloom_env.server"]
package-dir = { "legaloom_env" = ".", "legaloom_env.server" = "server" }
